<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Login"
            type="com.example.pado0.rabbitfight.LoginActivity" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/loginimage"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:contentDescription="@string/loginimage"
            android:scaleType="fitXY"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/start" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="200sp"
            android:layout_height="55sp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:elevation="0dp"
            android:text="@string/loginbutton"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/loginimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747" />

        <EditText
            android:id="@+id/loginemail"
            android:layout_width="500sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.161"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/loginemailtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083" />

        <TextView
            android:id="@+id/loginpasswordtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8sp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.289" />

        <CheckBox
            android:id="@+id/rememberlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_login"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{Login::SignupButton}"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="500sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/loginpassword"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393"
            tools:targetApi="o" />


        <Button
            android:id="@+id/forgetpasswordbutton"
            android:layout_width="187sp"
            android:layout_height="33sp"
            android:background="?attr/actionBarDivider"
            android:onClick="@{Login::ForgetPasswordButton}"
            android:text="@string/forget_your_password"
            android:textAlignment="center"
            android:textColor="#cc0000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.542" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googlesigninbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="0dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.839"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747" />


    </android.support.constraint.ConstraintLayout>
</layout>