<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Signup"
            type="com.example.pado0.rabbitfight.SignupActivity"/>
    </data>


    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signuptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="회원가입"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds" />

            <ImageView
                android:id="@+id/signupprofilepicture"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:contentDescription="@string/signupiv"
                app:srcCompat="@mipmap/logo"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="프로필사진"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="450sp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signupemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/signupemailduplicatebutton"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/이메일체크"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="450sp"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signupnickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nickname"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/signupnicknameduplicatebutton"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/닉네임체크"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signuppassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/emailpattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordruletext"
                android:textColor="@android:color/holo_red_light" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signuppassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="PasswordCheck"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/signupbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="회원가입"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signupcancelbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="취소하기"
                    android:onClick="@{Signup::finish}"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
</layout>